Fix CSS for 2 editors.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -1427,7 +1427,7 @@ button {
 .froala-editor.f-basic {
   padding: 0px;
   z-index: 999;
-  position: relative;
+  position: initial;
   border-bottom: 0 !important;
 }
 .froala-editor.f-basic:before {
