--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -1,4 +1,4 @@
-@import url('froala_page.css');
+@import url('froala_page.min.css');
 /*!
  * froala_editor v1.2.2 (http://editor.froala.com)
  * Copyright 2014-2014 Froala
