--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -1,5 +1,5 @@
 /*!
- * froala_editor v1.2.2 (http://editor.froala.com)
+ * froala_editor v1.2.3 (http://editor.froala.com)
  * Copyright 2014-2014 Froala
  */
 .red-theme.froala-box .html-switch {
@@ -145,6 +145,9 @@
 }
 .red-theme.froala-editor .fr-trigger.active:after {
   border-top-color: #b8312f !important;
+}
+.red-theme.froala-editor .fr-dropdown .fr-trigger {
+  width: calc(40px - 2px);
 }
 .red-theme.froala-editor .fr-dropdown .fr-dropdown-menu {
   background: #ffffff;
