--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -68,7 +68,7 @@
 .gray-theme.froala-box .froala-element.f-basic {
   border: solid 1px #75706b;
   background: transparent;
-  color: #28324e;
+  color: '#444';
 }
 .gray-theme.froala-box .froala-element.f-basic a {
   color: inherit;
