--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -68,7 +68,7 @@
 .red-theme.froala-box .froala-element.f-basic {
   border: solid 1px #252525;
   background: transparent;
-  color: #444444;
+  color: '#444';
 }
 .red-theme.froala-box .froala-element.f-basic a {
   color: inherit;
