--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -68,7 +68,7 @@
 .royal-theme.froala-box .froala-element.f-basic {
   border: solid 1px #553982;
   background: transparent;
-  color: #553982;
+  color: '#444';
 }
 .royal-theme.froala-box .froala-element.f-basic a {
   color: inherit;
