--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -68,7 +68,7 @@
 .dark-theme.froala-box .froala-element.f-basic {
   border: solid 1px #252525;
   background: transparent;
-  color: #ffffff;
+  color: '#444';
 }
 .dark-theme.froala-box .froala-element.f-basic a {
   color: inherit;
