--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -652,7 +652,7 @@ hr.fr-tag {
   padding-left: 3px;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu {
-  padding: 10px 10px 10px;
+  padding: 0;
   line-height: 0px;
   white-space: nowrap;
   text-align: left;
@@ -662,17 +662,29 @@ hr.fr-tag {
   white-space: nowrap;
   display: inline-block;
 }
-.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu > div + div {
-  margin-left: 12px;
-}
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p {
-  margin: 0 0px 10px;
+  margin: 0;
   font-size: 13px;
   line-height: 1;
   color: #444444;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p span {
   float: left;
+}
+.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p span.fr-choose-color {
+  padding: 5px 10px;
+  width: 50%;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-top: solid 4px transparent;
+  border-bottom: solid 4px transparent;
+  cursor: pointer;
+}
+.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p span.fr-choose-color.active,
+.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p span.fr-choose-color:hover {
+  border-bottom: solid 4px #2c82c9;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p a.fr-bttn {
   display: inline-block;
@@ -694,11 +706,12 @@ hr.fr-tag {
   clear: both;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn {
-  display: inline;
-  width: 18px;
-  height: 18px;
+  display: inline-block;
+  width: 32px;
+  height: 32px;
   padding: 0;
-  border: solid 1px #ffffff;
+  border: 0;
+  outline: 0;
   position: relative;
   z-index: 100;
   line-height: 16px !important;
@@ -710,25 +723,33 @@ hr.fr-tag {
   background-clip: padding-box;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn.active {
-  border: solid 1px #ffffff;
+  border: 0;
   outline: solid 1px #252525;
   z-index: 101;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn.active:after {
   position: absolute;
-  left: 2px;
-  top: 1px;
+  left: 0px;
+  right: 0px;
+  text-align: center;
+  top: 0px;
+  bottom: 0;
+  line-height: 30px;
   content: "\f00c";
   font-family: 'FontAwesome';
   font-weight: normal;
   font-size: 12px;
   color: #ffffff;
 }
+.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn i {
+  font-size: 13px;
+}
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .separator {
   height: 8px;
 }
 .froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn:hover:not(:focus):not(:active) {
-  border: solid 1px #252525;
+  outline: solid 1px #252525;
+  z-index: 300;
 }
 .froala-editor .fr-dropdown .fr-dropdown-menu li a.format-blockquote {
   font-style: italic;
@@ -1617,9 +1638,8 @@ hr.fr-tag {
   float: left;
 }
 .froala-editor.f-basic.f-scroll {
-  position: absolute;
-  left: 0;
-  right: 0;
+  position: fixed;
+  top: 0px;
   border-bottom-width: 1px !important;
   border-bottom-style: solid !important;
   border-bottom-color: inherit !important;
