--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -286,20 +286,21 @@ hr.fr-tag {
 .froala-element span {
   line-height: 120%;
 }
-.froala-element.f-basic.f-placeholder:before {
-  left: 10px;
-  right: 10px;
-  top: 10px;
+.froala-element + span.fr-placeholder {
+  display: none;
 }
-.froala-element.f-placeholder:before {
+.froala-element.f-placeholder + span.fr-placeholder {
   color: #cccccc;
   font-style: italic;
-  content: attr(data-placeholder);
   position: absolute;
   margin: auto;
   left: 0;
   top: 0;
-  right: 0;
+  display: inline-block;
+  cursor: text;
+}
+.froala-element.f-basic.f-placeholder + span.fr-placeholder {
+  left: 10px;
 }
 .froala-element.not-msie pre,
 .froala-element.not-msie blockquote {
