--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -204,18 +204,14 @@
 .dark-theme.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu p a.fr-bttn:hover {
   color: #2c82c9;
 }
-.dark-theme.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn {
-  border: solid 1px #353535;
-}
 .dark-theme.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn.active {
-  border: solid 1px #353535;
   outline: solid 1px #ffffff;
 }
 .dark-theme.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn.active:after {
   color: #ffffff;
 }
 .dark-theme.froala-editor .fr-dropdown.fr-color-picker .fr-dropdown-menu .fr-color-bttn:hover:not(:focus):not(:active) {
-  border: solid 1px #ffffff;
+  outline: solid 1px #ffffff;
 }
 .dark-theme.froala-editor .froala-popup {
   background: #353535;
