--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -5,6 +5,12 @@
 .gray-theme.froala-box .html-switch {
   border-color: #aaaaaa;
 }
+.gray-theme.froala-box .froala-wrapper.f-basic {
+  border: solid 1px #75706b;
+}
+.gray-theme.froala-box .froala-wrapper.f-basic.f-placeholder + span.fr-placeholder {
+  margin: 10px;
+}
 .gray-theme.froala-box .froala-element hr {
   border-top-color: #d1d5d8;
 }
@@ -66,9 +72,9 @@
   border: solid 1px #75706b;
 }
 .gray-theme.froala-box .froala-element.f-basic {
-  border: solid 1px #75706b;
   background: transparent;
   color: '#444';
+  padding: 10px;
 }
 .gray-theme.froala-box .froala-element.f-basic a {
   color: inherit;
