--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -5,6 +5,12 @@
 .royal-theme.froala-box .html-switch {
   border-color: #aaaaaa;
 }
+.royal-theme.froala-box .froala-wrapper.f-basic {
+  border: solid 1px #553982;
+}
+.royal-theme.froala-box .froala-wrapper.f-basic.f-placeholder + span.fr-placeholder {
+  margin: 10px;
+}
 .royal-theme.froala-box .froala-element hr {
   border-top-color: #cccccc;
 }
@@ -66,9 +72,9 @@
   border: solid 1px #553982;
 }
 .royal-theme.froala-box .froala-element.f-basic {
-  border: solid 1px #553982;
   background: transparent;
   color: '#444';
+  padding: 10px;
 }
 .royal-theme.froala-box .froala-element.f-basic a {
   color: inherit;
